--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>model-viewer demo</title>
+  <title>Nakamu Robo AR</title>
 
-  <!-- model-viewer 読み込み -->
+  <!-- model-viewer -->
   <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
   </script>
@@ -12,58 +12,75 @@
   <style>
     body {
       margin: 0;
-      background: #111;
+      background: #000;
       color: #fff;
       font-family: sans-serif;
       text-align: center;
     }
+    h2 {
+      margin: 10px 0;
+      font-weight: normal;
+    }
     model-viewer {
       width: 100vw;
       height: 80vh;
+      background: #111;
     }
     .buttons {
-      margin-top: 10px;
+      margin: 10px 0 20px;
     }
     button {
       font-size: 16px;
-      padding: 10px 20px;
-      margin: 0 5px;
+      padding: 10px 18px;
+      margin: 0 6px;
+      border-radius: 6px;
+      border: none;
     }
   </style>
 </head>
 
 <body>
 
-  <h2>Robot Dance</h2>
+  <h2>Nakamu Robo</h2>
 
   <model-viewer
     id="mv"
     src="dance.glb"
     camera-controls
+    autoplay
+    loop
+
+    <!-- AR -->
+    ar
+    ar-modes="scene-viewer quick-look"
+    ar-scale="fixed"
+
     shadow-intensity="0.8"
     exposure="1.1"
     interaction-prompt="none">
   </model-viewer>
 
   <div class="buttons">
-    <button onclick="playDance()">▶ 再生</button>
-    <button onclick="stopDance()">⏸ 停止</button>
+    <button onclick="play()">▶ 再生</button>
+    <button onclick="pause()">⏸ 停止</button>
   </div>
 
   <script>
     const mv = document.getElementById("mv");
 
-    function playDance() {
-      mv.play(); // アニメが1つならこれでOK
+    function play() {
+      mv.play();
     }
 
-    function stopDance() {
+    function pause() {
       mv.pause();
     }
 
-    // URLパラメータ対応（NFC用）
-    // 例： index.html?play=on
+    // ===== URLパラメータ（NFC用）=====
+    // ?play=on  → 再生
+    // ?play=off → 停止
     const params = new URLSearchParams(location.search);
+
     if (params.get("play") === "on") {
       mv.play();
     }
