--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8" />
   <title>Nakamu Robo AR</title>
 
   <!-- model-viewer -->
@@ -17,31 +17,36 @@
       font-family: sans-serif;
       text-align: center;
     }
-    h2 {
+
+    h1 {
       margin: 10px 0;
-      font-weight: normal;
+      font-size: 20px;
     }
+
     model-viewer {
-      width: 100vw;
+      width: 100%;
       height: 80vh;
-      background: #111;
+      background: #000;
     }
-    .buttons {
-      margin: 10px 0 20px;
+
+    .controls {
+      margin: 10px;
     }
+
     button {
+      padding: 10px 20px;
+      margin: 0 5px;
       font-size: 16px;
-      padding: 10px 18px;
-      margin: 0 6px;
-      border-radius: 6px;
+      border-radius: 8px;
       border: none;
+      cursor: pointer;
     }
   </style>
 </head>
 
 <body>
 
-  <h2>Nakamu Robo</h2>
+  <h1>Nakamu Robo</h1>
 
   <model-viewer
     id="mv"
@@ -49,18 +54,15 @@
     camera-controls
     autoplay
     loop
-
-    <!-- AR -->
     ar
     ar-modes="scene-viewer quick-look"
     ar-scale="fixed"
-
     shadow-intensity="0.8"
     exposure="1.1"
     interaction-prompt="none">
   </model-viewer>
 
-  <div class="buttons">
+  <div class="controls">
     <button onclick="play()">▶ 再生</button>
     <button onclick="pause()">⏸ 停止</button>
   </div>
@@ -73,18 +75,6 @@
     }
 
     function pause() {
-      mv.pause();
-    }
-
-    // ===== URLパラメータ（NFC用）=====
-    // ?play=on  → 再生
-    // ?play=off → 停止
-    const params = new URLSearchParams(location.search);
-
-    if (params.get("play") === "on") {
-      mv.play();
-    }
-    if (params.get("play") === "off") {
       mv.pause();
     }
   </script>
