--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
       font-size: 20px;
     }
 
-    model-viewer {
+  model-viewer {
       width: 100%;
-      height: 80vh;
-      background: #000;
+      height: 55vh;
+      max-height: 420px;
+      margin: 0 auto;
     }
 
     .controls {
