--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
   model-viewer {
       width: 100%;
-      height: 55vh;
-      max-height: 420px;
+      height: 200px;   /* ← 約5cm */
+      max-width: 300px;
       margin: 0 auto;
+      background: #000;
     }
 
     .controls {
