--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Nakamu Robo AR</title>
 
-  <!-- model-viewer -->
   <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
   </script>
@@ -23,18 +22,11 @@
       font-size: 18px;
     }
 
-    /* ★ model-viewerを包む箱（ARはみ出し対策） */
-    .viewer-wrap {
-      width: 100%;
-      max-width: 320px;
-      margin: 0 auto;
-      padding-bottom: 64px; /* ← ARボタン用の余白 */
-    }
-
-    /* ★ 画面表示サイズ（約5cm） */
+    /* ★ サイズ制限をしない（元に戻す） */
     model-viewer {
       width: 100%;
-      height: 200px; /* 約5cm */
+      height: 70vh;   /* 普通サイズ表示 */
+      max-height: 600px;
       background: #000;
     }
   </style>
@@ -44,21 +36,18 @@
 
   <h1>Nakamu Robo</h1>
 
-  <div class="viewer-wrap">
-    <model-viewer
-      id="mv"
-      src="dance.glb"
-      camera-controls
-      autoplay
-      loop
-      ar
-      ar-modes="scene-viewer quick-look"
-      ar-scale="fixed"
-      interaction-prompt="none"
-      shadow-intensity="0.8"
-      exposure="1.1">
-    </model-viewer>
-  </div>
+  <model-viewer
+    src="dance.glb"
+    camera-controls
+    autoplay
+    loop
+    ar
+    ar-modes="scene-viewer quick-look"
+    ar-scale="fixed"
+    interaction-prompt="none"
+    shadow-intensity="0.8"
+    exposure="1.1">
+  </model-viewer>
 
 </body>
 </html>
