--- a/index.html
+++ b/index.html
@@ -17,36 +17,30 @@
       text-align: center;
     }
 
-    h1 {
-      margin: 12px 0;
-      font-size: 18px;
-    }
-
-    /* ★ サイズ制限をしない（元に戻す） */
     model-viewer {
       width: 100%;
-      height: 70vh;   /* 普通サイズ表示 */
-      max-height: 600px;
+      height: 100vh;
       background: #000;
+    }
+
+    /* UIを消す */
+    model-viewer::part(default-progress-bar) {
+      display: none;
     }
   </style>
 </head>
 
 <body>
 
-  <h1>Nakamu Robo</h1>
-
   <model-viewer
     src="dance.glb"
-    camera-controls
-    autoplay
-    loop
     ar
     ar-modes="scene-viewer quick-look"
     ar-scale="fixed"
-    interaction-prompt="none"
-    shadow-intensity="0.8"
-    exposure="1.1">
+    autoplay
+    loop
+    camera-controls="false"
+    interaction-prompt="none">
   </model-viewer>
 
 </body>
