--- a/index.html
+++ b/index.html
@@ -1,79 +1,95 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>Nakamu Robo AR</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
+<style>
+html, body {
+  margin: 0;
+  padding: 0;
+  background: black;
+  height: 100%;
+}
 
-  <style>
-    body {
-      margin: 0;
-      background: #000;
-      color: #fff;
-      font-family: sans-serif;
-      text-align: center;
-    }
+/* 転送エフェクト */
+@keyframes teleport {
+  0% {
+    transform: translateY(40px) scale(0.15);
+    opacity: 0;
+    filter: brightness(2) blur(8px);
+  }
+  40% {
+    opacity: 1;
+    filter: brightness(2.5) blur(4px);
+  }
+  100% {
+    transform: translateY(0) scale(1);
+    opacity: 1;
+    filter: brightness(1) blur(0);
+  }
+}
 
-    model-viewer {
-      width: 100%;
-      height: 100vh;
-      background: #000;
-    }
+model-viewer {
+  width: 100vw;
+  height: 100vh;
+  animation: teleport 1.4s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
+}
 
-    /* ★ 自作ARボタン */
-    .ar-big-button {
-      position: fixed;
-      bottom: 24px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 200px;
-      height: 200px;
-      border-radius: 100px;
-      background: white;
-      color: black;
-      font-size: 24px;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 0 30px rgba(255,255,255,0.9);
-      z-index: 9999;
-      user-select: none;
-    }
+/* 転送ビーム（床） */
+#beam {
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  width: 180px;
+  height: 180px;
+  background: radial-gradient(circle, rgba(0,255,255,0.8) 0%, rgba(0,255,255,0.3) 40%, transparent 70%);
+  transform: translateX(-50%) scale(0);
+  animation: beam 1.4s ease-out forwards;
+  pointer-events: none;
+}
 
-    .ar-big-button:active {
-      transform: translateX(-50%) scale(0.95);
-    }
-  </style>
+@keyframes beam {
+  0% { transform: translateX(-50%) scale(0); opacity: 0; }
+  30% { opacity: 1; }
+  100% { transform: translateX(-50%) scale(1.2); opacity: 0; }
+}
+</style>
 </head>
 
 <body>
 
-  <model-viewer
-    id="mv"
-    src="dance.glb"
-    ar
-    ar-modes="scene-viewer quick-look"
-    ar-scale="fixed"
-    autoplay
-    loop
-    interaction-prompt="none">
-  </model-viewer>
+<div id="beam"></div>
 
-  <!-- ★ デカいARボタン -->
-  <div class="ar-big-button" onclick="enterAR()">
-    ARで見る
-  </div>
+<model-viewer
+  id="viewer"
+  src="model.glb"
+  ar
+  ar-modes="scene-viewer webxr quick-look"
+  camera-controls
+  exposure="1.1"
+  shadow-intensity="1"
+  environment-image="neutral"
+>
+</model-viewer>
 
-  <script>
-    function enterAR() {
-      const mv = document.getElementById('mv');
-      mv.activateAR();
-    }
-  </script>
+<script>
+const viewer = document.getElementById("viewer");
+const beam = document.getElementById("beam");
+
+viewer.addEventListener("ar-status", (e) => {
+  if (e.detail.status === "session-started") {
+    // アニメーション再発動
+    viewer.style.animation = "none";
+    beam.style.animation = "none";
+    void viewer.offsetWidth;
+
+    viewer.style.animation = "teleport 1.4s cubic-bezier(0.2, 0.8, 0.2, 1) forwards";
+    beam.style.animation = "beam 1.4s ease-out forwards";
+  }
+});
+</script>
 
 </body>
 </html>
