--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ model-viewer {
 
 <model-viewer
   id="viewer"
-  src="model.glb"
+  src="dance.glb"
   ar
   ar-modes="scene-viewer webxr quick-look"
   camera-controls
