--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       background: radial-gradient(circle at center, #111 0%, #000 70%);
     }
 
-    /* ARボタンをデカくする（Android対応） */
+    /* ARボタンを大きく（Android対応） */
     model-viewer::part(ar-button) {
       bottom: 24px;
       right: 24px;
@@ -35,7 +35,7 @@
       border: none;
     }
 
-    /* SF転送（Web側での限界演出） */
+    /* 下から召喚されるSF転送演出 */
     .teleport {
       animation: teleport 2s ease-out forwards;
     }
@@ -43,12 +43,12 @@
     @keyframes teleport {
       0% {
         opacity: 0;
-        transform: scale(0.15) translateY(120px);
+        transform: scale(0.15) translateY(-120px);
         filter: brightness(4) blur(8px);
       }
       40% {
         opacity: 1;
-        transform: scale(1.2) translateY(-20px);
+        transform: scale(1.2) translateY(20px);
         filter: brightness(3) blur(2px);
       }
       70% {
@@ -74,7 +74,6 @@
   camera-controls
   auto-rotate
   autoplay
-  animation-name=""
   interaction-prompt="none"
   exposure="1.1"
   shadow-intensity="0.8"
