--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <title>Nakamurobo AR</title>
 
   <!-- model-viewer -->
   <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
   </script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
     html, body {
@@ -20,39 +22,50 @@
     }
 
     model-viewer {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       background: #000;
     }
 
     /* ARボタンをデカく中央下に */
-    model-viewer::part(ar-button) {
-      position: fixed;
+    .ar-button {
+      position: absolute;
       bottom: 24px;
       left: 50%;
       transform: translateX(-50%);
       padding: 16px 28px;
       font-size: 18px;
-      border-radius: 999px;
-      background: #00e5ff;
-      color: #000;
       font-weight: bold;
+      background: #00ffcc;
+      color: #000;
+      border-radius: 999px;
+      border: none;
+      cursor: pointer;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
     }
   </style>
 </head>
 
 <body>
-  <model-viewer
-    src="dance.glb"
-    ios-src="dance.usdz"
-    ar
-    ar-modes="scene-viewer quick-look webxr"
-    ar-scale="auto"
-    camera-controls
-    auto-rotate
-    shadow-intensity="1"
-    exposure="1"
-    alt="AR model">
-  </model-viewer>
+
+<model-viewer
+  src="dance.glb"
+  ios-src="dance.usdz"
+  ar
+  ar-modes="scene-viewer quick-look webxr"
+  camera-controls
+  autoplay
+  animation-name="dance"
+  scale="1 1 1"
+  shadow-intensity="1"
+  exposure="1"
+  ar-placement="floor">
+
+  <button slot="ar-button" class="ar-button">
+    🤖 ARで召喚する
+  </button>
+
+</model-viewer>
+
 </body>
 </html>
