--- a/index.html
+++ b/index.html
@@ -1,69 +1,61 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <title>Nakamurobo AR</title>
+<meta charset="utf-8">
+<title>Nakamurobo AR</title>
 
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
+<script type="module"
+  src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+</script>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      background: #000;
-      overflow: hidden;
-      font-family: sans-serif;
-    }
+<style>
+html, body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  overflow: hidden;
+}
 
-    model-viewer {
-      width: 100%;
-      height: 100%;
-      background: #000;
-    }
+model-viewer {
+  width: 100%;
+  height: 100%;
+}
 
-    .ar-btn {
-      position: fixed;
-      bottom: 24px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 16px 28px;
-      font-size: 18px;
-      font-weight: bold;
-      border-radius: 999px;
-      background: #00ffcc;
-      color: #000;
-      text-decoration: none;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
-      z-index: 10;
-    }
-  </style>
+.tap-guide {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 14px 22px;
+  background: rgba(0,0,0,0.7);
+  color: #fff;
+  font-size: 16px;
+  border-radius: 999px;
+  pointer-events: none;
+}
+</style>
 </head>
 
 <body>
 
-<!-- 3D表示（全端末共通） -->
 <model-viewer
   src="dance.glb"
+  ios-src="dance.usdz"
+  ar
+  ar-modes="scene-viewer quick-look"
   camera-controls
   autoplay
   animation-name="dance"
-  exposure="1"
-  shadow-intensity="1">
+  scale="1 1 1"
+  ar-placement="floor">
 </model-viewer>
 
-<!-- iPhone用 AR起動ボタン（これが本命） -->
-<a
-  href="dance.usdz"
-  rel="ar"
-  class="ar-btn">
-  AR起動
-</a>
+<div class="tap-guide">
+  📱 モデルをタップしてAR起動
+</div>
 
 </body>
 </html>
