--- a/index.html
+++ b/index.html
@@ -39,16 +39,6 @@
       z-index: 100;
     }
 
-    .overlay h1 {
-      font-size: 20px;
-      margin-bottom: 12px;
-    }
-
-    .overlay p {
-      font-size: 15px;
-      opacity: 0.9;
-    }
-
     .btn {
       display: inline-block;
       margin-top: 20px;
@@ -60,7 +50,6 @@
       text-decoration: none;
     }
 
-    /* ARボタン（通常時） */
     model-viewer::part(ar-button) {
       width: 180px;
       height: 46px;
@@ -75,22 +64,25 @@
 
 <body>
 
-<!-- LINE内ブラウザ用オーバーレイ -->
+<!-- LINE用オーバーレイ -->
 <div id="lineOverlay" class="overlay">
   <div>
-    <h1>⚠️ ARはLINEでは起動できません</h1>
+    <h2>⚠️ LINEではARが起動できません</h2>
     <p>
-      右上の「︙」をタップして<br>
-      <b>「他のブラウザで開く（Chrome / Safari）」</b><br>
-      を選んでください
+      下のボタンから<br>
+      <b>Chrome / Safari</b> で開いてください
     </p>
-    <a href="https://nakamurobo2026.github.io/modelviewer/" class="btn">
+
+    <!-- Android：Chromeを強制起動 -->
+    <a
+      id="openBrowser"
+      class="btn">
       🌐 ブラウザで開く
     </a>
   </div>
 </div>
 
-<!-- 3D / AR本体 -->
+<!-- AR本体 -->
 <model-viewer
   src="dance.glb"
   ios-src="dance.usdz"
@@ -99,17 +91,31 @@
   camera-controls
   autoplay
   animation-name="dance"
-  scale="1 1 1"
-  exposure="1"
-  shadow-intensity="1">
+  scale="1 1 1">
 </model-viewer>
 
 <script>
   const ua = navigator.userAgent;
   const isLINE = /Line/i.test(ua);
+  const isAndroid = /Android/i.test(ua);
+  const isiPhone = /iPhone|iPad/i.test(ua);
 
   if (isLINE) {
     document.getElementById("lineOverlay").style.display = "flex";
+
+    const btn = document.getElementById("openBrowser");
+
+    if (isAndroid) {
+      // Android：Chromeを直接起動
+      btn.href =
+        "intent://nakamurobo2026.github.io/modelviewer/#Intent;" +
+        "scheme=https;" +
+        "package=com.android.chrome;" +
+        "end;";
+    } else if (isiPhone) {
+      // iPhone：Safariで開く（ユーザー操作必須）
+      btn.href = "https://nakamurobo2026.github.io/modelviewer/";
+    }
   }
 </script>
 
