--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <!-- 3D表示 -->
   <model-viewer
     id="viewer"
-    src="model.glb"
-    ios-src="model.usdz"
+    src="dance.glb"
+    ios-src="dance.usdz"
     ar
     ar-modes="scene-viewer quick-look"
     camera-controls
