--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       if (ua.includes("iphone") || ua.includes("ipad")) {
         const link = document.createElement("a");
         link.rel = "ar";
-        link.href = "dance.usdz";
+        link.href = "https://nakamurobo2026.github.io/modelviewer/dance.usdz";
         document.body.appendChild(link);
         link.click();
       }
