--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AR Viewer</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AR Viewer</title>
 
-  <script type="module"
-    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
+<script type="module"
+  src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+</script>
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      background: #000;
-      color: #fff;
-      font-family: sans-serif;
-    }
-    model-viewer {
-      width: 100%;
-      height: 60vh;
-      background: #111;
-    }
-    button {
-      margin-top: 20px;
-      padding: 16px 28px;
-      font-size: 18px;
-      border-radius: 999px;
-      border: none;
-      background: #00aaff;
-      color: #fff;
-      font-weight: bold;
-    }
-  </style>
+<style>
+body {
+  margin: 0;
+  background: #000;
+  color: #fff;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+model-viewer {
+  width: 100%;
+  height: 60vh;
+  background: #111;
+}
+
+/* 共通ボタン風 */
+.ar-button {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 16px 28px;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 999px;
+  text-decoration: none;
+  color: #000;
+  background: #00aaff;
+}
+</style>
 </head>
 
 <body>
@@ -41,36 +44,26 @@
 <model-viewer
   src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
   ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
-  ar
-  ar-modes="scene-viewer quick-look"
   camera-controls
   auto-rotate>
 </model-viewer>
 
-<button onclick="startAR()">ARで表示する</button>
+<!-- iPhone用：タップでAR起動（これが最重要） -->
+<a
+  class="ar-button"
+  rel="ar"
+  href="https://nakamurobo2026.github.io/modelviewer/dance.usdz">
+  ARで表示する
+</a>
 
+<!-- Android用 -->
 <script>
-function startAR() {
-  const ua = navigator.userAgent.toLowerCase();
-
-  // ✅ iPhone / iPad（Quick Look）
-  if (ua.includes("iphone") || ua.includes("ipad")) {
-    window.location.href =
-      "https://nakamurobo2026.github.io/modelviewer/dance.usdz";
-  }
-
-  // ✅ Android（Scene Viewer）
-  else if (ua.includes("android")) {
-    window.location.href =
-      "intent://arvr.google.com/scene-viewer/1.0" +
-      "?file=https://nakamurobo2026.github.io/modelviewer/dance.glb" +
-      "&mode=ar_preferred" +
-      "#Intent;scheme=https;package=com.google.ar.core;end;";
-  }
-
-  else {
-    alert("この端末はAR非対応です");
-  }
+if (navigator.userAgent.toLowerCase().includes("android")) {
+  document.querySelector(".ar-button").href =
+    "intent://arvr.google.com/scene-viewer/1.0" +
+    "?file=https://nakamurobo2026.github.io/modelviewer/dance.glb" +
+    "&mode=ar_preferred" +
+    "#Intent;scheme=https;package=com.google.ar.core;end;";
 }
 </script>
 
