--- a/qr/index.html
+++ b/qr/index.html
@@ -63,7 +63,7 @@
 <script>
   const ua = navigator.userAgent.toLowerCase();
 
-  const arPage = "https://nakamurobo2026.github.io/modelviewer/";
+  const arPage = "https://nakamurobo2026.github.io/modelviewer/index.html";
 
   // Android → 直接ARページへ
   if (ua.includes("android")) {
