--- a/qr/index.html
+++ b/qr/index.html
@@ -1,176 +1,122 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>AR起動案内</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>AR Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
+  <!-- model-viewer -->
+  <script type="module"
+    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+  </script>
 
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       background: #000;
       color: #fff;
       font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+      height: 100%;
+    }
+
+    .wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
       text-align: center;
-      padding: 40px 20px;
     }
-    h1 {
-      font-size: 20px;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 14px;
-      line-height: 1.7;
-      opacity: 0.9;
-    }
-    .safari {
-      margin-top: 30px;
-    }
-    .safari img {
-      width: 80px;
-      margin-bottom: 10px;
-    }
-    .note {
-      margin-top: 20px;
-      font-size: 13px;
-      opacity: 0.6;
-    }
-  </style>
-</head>
 
-<body>
-
-<h1>ARを起動しています…</h1>
-
-<p id="message">しばらくお待ちください</p>
-
-<div id="safariGuide" class="safari" style="display:none;">
-  <img src="safari.png" alt="Safari">
-  <p>
-    iPhoneでは<br>
-    <strong>Safariで開く</strong>必要があります
-  </p>
-  <p>
-    画面下の<strong>共有ボタン（□↑）</strong>をタップし<br>
-    <strong>「Safariで開く」</strong>を選んでください
-  </p>
-  <p class="note">
-    ※ LINEアプリ内ブラウザでは<br>
-    ARは起動できません
-  </p>
-</div>
-
-<script>
-  const ua = navigator.userAgent.toLowerCase();
-  const arPage = "https://nakamurobo2026.github.io/modelviewer/";
-
-  // Android → 直接ARページへ
-  if (ua.includes("android")) {
-    window.location.href = arPage;
-  }
-
-  // iPhone / iPad → Safari案内
-  else if (ua.includes("iphone") || ua.includes("ipad")) {
-    document.getElementById("message").innerText =
-      "iPhoneではSafariが必要です";
-    document.getElementById("safariGuide").style.display = "block";
-  }
-
-  // その他
-  else {
-    document.getElementById("message").innerText =
-      "この端末はARに対応していません";
-  }
-</script>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>AR起動</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      margin: 0;
+    model-viewer {
+      width: 100%;
+      height: 60vh;
       background: #000;
-      color: #fff;
-      font-family: sans-serif;
-      text-align: center;
-      padding: 40px 20px;
     }
-    h1 {
-      font-size: 20px;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 14px;
-      line-height: 1.6;
-      opacity: 0.9;
-    }
-    .safari {
-      margin-top: 30px;
-    }
-    .safari img {
-      width: 80px;
-      margin-bottom: 10px;
-    }
-    .btn {
-      margin-top: 30px;
-      padding: 14px 24px;
-      font-size: 16px;
-      border-radius: 10px;
+
+    button {
+      margin-top: 20px;
+      padding: 18px 32px;
+      font-size: 18px;
+      font-weight: bold;
       border: none;
-      background: #00c8ff;
+      border-radius: 999px;
+      background: #00ffcc;
       color: #000;
     }
+
+    .note {
+      margin-top: 16px;
+      font-size: 14px;
+      opacity: 0.8;
+      line-height: 1.5;
+    }
+
+    .safari-guide {
+      display: none;
+      margin-top: 24px;
+      font-size: 14px;
+      line-height: 1.6;
+    }
+
+    .safari-guide img {
+      width: 64px;
+      margin: 12px 0;
+    }
   </style>
 </head>
 
 <body>
+  <div class="wrap">
 
-<h1>ARを起動しています…</h1>
+    <model-viewer
+      id="mv"
+      src="../dance.glb"
+      ios-src="../dance.usdz"
+      ar
+      ar-modes="quick-look scene-viewer webxr"
+      camera-controls
+      autoplay
+      exposure="1">
+    </model-viewer>
 
-<p id="message">しばらくお待ちください</p>
+    <button onclick="startAR()">ARで見る</button>
 
-<div id="safariGuide" style="display:none" class="safari">
-  <img src="safari.png" alt="Safari">
-  <p>
-    iPhoneでは<br>
-    <strong>Safariで開く</strong>必要があります
-  </p>
-  <p>
-    右上の「︙」または「共有」から<br>
-    Safariで開いてください
-  </p>
-</div>
+    <div class="note">
+      ※ iPhoneはSafariで開く必要があります
+    </div>
 
-<script>
-  const ua = navigator.userAgent.toLowerCase();
+    <div class="safari-guide" id="safariGuide">
+      <img src="./safari.png" alt="Safari" />
+      <div>
+        LINE内ブラウザではARが起動しません<br>
+        右上「︙」→「Safariで開く」
+      </div>
+    </div>
 
-  // ★ modelviewer/index.html への相対パス
-  const arPage = "../index.html";
+  </div>
 
-  // Android → 即AR起動
-  if (ua.includes("android")) {
-    location.href = arPage;
-  }
+  <script>
+    function isLine() {
+      return navigator.userAgent.includes("Line");
+    }
 
-  // iPhone / iPad → Safari案内
-  else if (ua.includes("iphone") || ua.includes("ipad")) {
-    document.getElementById("message").innerText =
-      "iPhoneではSafariが必要です";
-    document.getElementById("safariGuide").style.display = "block";
-  }
+    function isIOS() {
+      return /iPhone|iPad|iPod/.test(navigator.userAgent);
+    }
 
-  // その他
-  else {
-    document.getElementById("message").innerText =
-      "この端末はARに対応していません";
-  }
-</script>
+    function startAR() {
+      const mv = document.getElementById("mv");
+      if (mv) {
+        mv.activateAR();
+      }
+    }
 
+    // iPhone + LINE のときだけ案内表示
+    if (isIOS() && isLine()) {
+      document.getElementById("safariGuide").style.display = "block";
+    }
+  </script>
 </body>
 </html>
