--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     <model-viewer
       id="mv"
-      src="../dance.glb"
-      ios-src="../dance.usdz"
+      src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
+      ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
       ar
       ar-modes="quick-look scene-viewer webxr"
       camera-controls
